--- a/irb.foc.forecaster/INSTALL
+++ b/irb.foc.forecaster/INSTALL
@@ -1,3 +1,5 @@
+Not suggested atm - the package is not well defined, better to simply run console_run.py:
+
 Open a terminal, point it at this path and issue:
 
 sudo python setup.py install
